Added logic to export PDF and Word